--- a/stylus/stylesheets/style.styl
+++ b/stylus/stylesheets/style.styl
@@ -133,17 +133,6 @@ border_radius()
 		width: auto !important
 		height: 300px !important
 
-// For card panels, we will steal the margin from the cards and use it for the card panel's
-// border, padding, and margin
-.card_panel
-	border: 1px solid #C0C0C0
-	border_radius(4px)
-	padding: 1px
-	margin-top: (card_margin - 2)
-	margin-bottom: (card_margin - 2)
-.card_panel .card
-	margin: 0px;
-
 #footer
 	margin: 20px
 
